# tensorzero

./: CONTRIBUTING.md  pnpm-lock.yaml
.github/workflows/: auto-approve-trusted-pr-workflows.yml  batch-completion-cron.yml  build-fixtures-container.yml  build-gateway-container.yml  build-gateway-e2e-container.yml  build-live-tests-container.yml  build-mock-provider-api-container.yml  build-provider-proxy-container.yml  build-ui-container.yml  caching-hack.yml  cancel-merge-queue-on-job-failure.yml  cancel-on-status-failure.yml  cancel-stale-merge-queue.yml  clickhouse-tests.yml  client-tests.yml  daily-tests.yml  dispatch-autopilot-e2e.yml  docker-hub-publish.yml  dummy.yml  general.yml  helm-publish.yml  k3d.yml  live-batch-tests.yml  mocked-batch-test.yml  optimization-test-cron.yml  pr-base-branch-check.yml  pypi-publish.yml  python-client-build.yml  security.yml  slash-command-autopilot-e2e.yml  slash-command-check-fork.yml  slash-command-dispatch.yml  ui-tests-e2e.yml  ui-tests.yml  upgrade-tensorzero-deps.yml
ci/: check-all-general-jobs-passed.sh
ci/cla-bot-worker/: wrangler.toml
crates/: Cargo.toml
crates/.config/: nextest.toml
crates/gateway/: Cargo.toml
crates/provider-proxy/: Cargo.toml
crates/tensorzero-core/: Cargo.toml
crates/tensorzero-error/: Cargo.toml
crates/tensorzero-http/: Cargo.toml
crates/tensorzero-mcp/: Cargo.toml
crates/tensorzero-node/: Cargo.toml
crates/tensorzero-otel/: Cargo.toml
crates/tensorzero-otel/src/: lib.rs
crates/tensorzero-overhead/: Cargo.toml
crates/tensorzero-types/: Cargo.toml
docs/: docs.json  pnpm-lock.yaml
recipes/: pyproject.toml
ui/: package.json
(+36 files in other folders)
