[package]
name = "tensorzero-otel"
edition.workspace = true
version.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
e2e_tests = []

[dependencies]
axum = { workspace = true }
clap = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
init-tracing-opentelemetry = { version = "0.37.0", features = ["xray"] }
metrics = "0.24.3"
metrics-exporter-prometheus = { workspace = true }
moka = { workspace = true }
once_cell = "1.21.4"
opentelemetry = "0.31.0"
opentelemetry-otlp = { version = "0.31.1", features = [
    "grpc-tonic",
    "tls",
    "tls-roots",
] }
opentelemetry-semantic-conventions = "0.31.0"
opentelemetry_sdk = "0.31.0"
rustls = { workspace = true }
serde_json = { workspace = true }
tensorzero-overhead = { path = "../tensorzero-overhead" }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
tonic = { version = "0.14.5", default-features = false }
tracing = { workspace = true }
tracing-futures = { version = "0.2.5", features = ["futures-03"] }
tracing-opentelemetry = "0.32.1"
tracing-opentelemetry-instrumentation-sdk = { workspace = true, features = [
    "http",
] }
tracing-subscriber = { version = "0.3.23", features = [
    "env-filter",
    "fmt",
    "json",
] }
uuid = { workspace = true }

[dev-dependencies]
gag = "1.0.0"
log = "0.4.29"
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[lints]
workspace = true
